more small edits in E1 summary

--- a/SnowmassStyle/Computing/E1-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E1-executiveSummary.tex
@@ -39,7 +39,7 @@ petabyte of total data per year. Large format CCD cameras to measure
 the growth of structure from weak gravitational lensing, wide-field
 spectroscopic facilities to map the clustering of galaxies, increases
 in the size of direct dark matter detectors, massive radio surveys,
-and ground and space-based Cosmic Microwave Background (CMB)
+and ground and space-based Cosmic Microwave Background 
 experiments will continue this growth in data over the coming decade.
 
 Regarding simulation facilities, 
@@ -69,8 +69,8 @@ scale and expected to reach the exascale after 2020. The data-related
 issues are more serious and will need changes in the current
 large-scale computing model. Successful implementation of the recently
 suggested Virtual Data Facility (VDF) capability at ALCF, NERSC, and
-OLCF, would go a long way towards addressing these issues for Cosmic
-Frontier simulations.
+OLCF, would go a long way towards addressing these issues for CF 
+simulations.
 
 There is a continued growth in data from CF
 experiments. 
@@ -87,7 +87,7 @@ data volume of the order of 100TB. Data management standards and
 software infrastructure vary widely across research teams. The
 projected requirements for 2020 are an order of magnitude improvement
 in data rates (to 10-100 GB/s), a similar increase in peak
-supercomputer performance (~200 PFlops), and the ability to store and
+supercomputer performance ($\approx 200$ PFlops), and the ability to store and
 analyze data sets in the 100PB class. It is difficult to make precise
 estimates for 2030 as hardware projections are hazy, however, the
 science requirements based on having complete datasets from missions
@@ -274,8 +274,8 @@ hopefully come to fruition in the near term.
 While much of the science in CFs is undertaken by small
 groups of physicists, the collaborations themselves have grown to
 hundreds and sometimes thousands of members. Many of the techniques
-utilized by these collaborations are common to multiple Cosmic
-Frontiers experiments. Most experiments have, however, developed their
+utilized by these collaborations are common to multiple CF 
+experiments. Most experiments have, however, developed their
 analysis and processing software independently of other CF 
 programs. This can lead to duplication of effort, software
 that is tailored only to meet a specific need, non-scalable
